<resources>
    <string name="app_name" translatable="false">Jami</string>
    <string name="app_author" translatable="false">Savoir-faire Linux Inc.</string>
    <string name="app_release" translatable="false">Világfa - %1$s</string>
    <string name="app_website" translatable="false">https://jami.net</string>
    <string name="app_website_contribute" translatable="false"><u>https://jami.net/contribute</u></string>
    <string name="gnu_license_website" translatable="false">https://www.gnu.org/licenses/gpl.html</string>
    <string name="ring_contribute_website" translatable="false">https://jami.net/contribute</string>
    <string name="savoirfairelinux_website" translatable="false">https://savoirfairelinux.com</string>
    <string name="copyright" translatable="false">2004&#8211;2022 Savoir-faire Linux Inc.</string>
    <string name="feedback_section">Feedback</string>
    <string name="report"><u>Send us an email</u></string>
    <string name="section_license">License</string>
    <string name="sponsor_section">Jami is a free software developed and supported by</string>
    <string name="copyright_section">Copyright</string>
    <string name="contribute_section">Contribute</string>
    <string name="version_section">Version</string>
    <string name="no_email_app_installed">No email app found, install one to send us a report</string>
    <string name="no_browser_app_installed">No web browser app found, install one to view this page</string>
    <string name="email_chooser_title">Send mail using…</string>
    <string name="website_chooser_title">View website using…</string>
    <string name="license">This software is provided \"as is\", without warranty of any kind. For details, see <u>GNU General Public License version 3 or later</u></string>
    <string name="description">Jami is free software for universal communication which respects the freedoms and privacy of its users.</string>
    <string name="credits">Credits</string>
    <string name="pip_title">Jami Conference</string>
    <string name="call_service_description">This service is necessary to keep your calls running in the foreground. It only runs during calls.</string>
    <string name="data_transfer_service_description">This service is necessary to display persistent notifications during file transfers. It only runs during file transfers.</string>
    <string name="developed_by">Developed by</string>
    <string name="designed_by">Designed by</string>
    <string name="ringtones_by">Ringtones by</string>
    <string name="credits_developer" translatable="false">Adrien Béraud\nAlbert Babí\nAlexandr Sergheev\nAlexandre Lision\nAlexandre Viau\nAline Bonnet\nAline Gondim Santos\nAmirHossein Naghshzan\nAndreas Traczyk\nAnthony Léonard\nBrando Tovar\nCyrille Béraud\nEdric Milaret\nÉloi Bail\nEmmanuel Lepage-Vallée\nFrédéric Guimont\nGuillaume Heller\nGuillaume Roguez\nHadrien De Sousa\nJulien Grossholtz\nKateryna Kostiuk\nLoïc Siret\nMarianne Forget\nMichel Schmit\nMingrui Zhang\nMohamed Chibani\nMohamed Amine Younes Bouacida\nNicolas Jäger\nNicolas Reynaud\nOlivier Gregoire\nOlivier Soldano\nPatrick Keroulas\nPeymane Marandi\nPierre Duchemin\nPhilippe Gorley\nRomain Bertozzi\nSaher Azer\nSébastien Blin\nSeva Ivanov\nSilbino Gonçalves Matado\nSimon Désaulniers\nStepan Salenikovich\nSimon Zeni\nThibault Wittemberg</string>
    <string name="credits_ringtones" translatable="false">Loïc Bogino</string>
    <string name="error_no_network">No network connectivity</string>
    <string name="error_account_offline">The account is offline</string>
    <string name="error_mobile_network_available_but_disabled">Please grant access to cellular network in the settings screen.</string>
    <string name="ab_action_chat">Text messaging</string>
    <string name="menu_item_contact_request">Contact requests</string>
    <string name="menu_item_accounts">Manage accounts</string>
    <string name="menu_item_account">Manage account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_advanced_settings">Advanced Settings</string>
    <string name="menu_item_account_settings">Account Settings</string>
    <string name="menu_item_plugin_list">Plugins Settings</string>
    <string name="menu_item_share">Share my account</string>
    <string name="menu_item_about">About Jami</string>
    <string name="dial_number">Dial a number</string>
    <plurals name="home_conferences_title">
        <item quantity="one">%d Conversation</item>
        <item quantity="other">%d Conversations</item>
    </plurals>
    <string name="searchbar_hint">Search name or phone number&#8230;</string>
    <string name="choose_number">Choose a number</string>
    <string name="notif_missed_incoming_call">Missed incoming call</string>
    <string name="notif_missed_outgoing_call">Missed outgoing call</string>
    <string name="notif_incoming_call_title">Incoming call from %1$s</string>
    <string name="notif_incoming_call">Incoming call</string>
    <string name="notif_outgoing_call_title">Outgoing call to %1$s</string>
    <string name="notif_outgoing_call">Outgoing call</string>
    <string name="notif_current_call_title">Ongoing call with %1$s</string>
    <string name="notif_current_call">Ongoing call</string>
    <string name="notif_channel_call_in_progress">Call in Progress</string>
    <string name="notif_channel_calls">Calls</string>
    <string name="notif_channel_missed_calls">Missed calls</string>
    <string name="notif_channel_incoming_calls">Incoming calls</string>
    <string name="notif_channel_messages">Messages</string>
    <string name="notif_channel_requests">Requests</string>
    <string name="notif_channel_file_transfer">File transfer</string>
    <string name="notif_channel_sync">Data sync</string>
    <string name="notif_channel_background_service">Background service</string>
    <string name="notif_channel_background_service_descr">Allows receiving calls and messages anytime.</string>
    <string name="notif_group_calls">Calls</string>
    <string name="notif_background_service">Jami is currently running in background</string>
    <string name="notif_mark_as_read">Mark as read</string>
    <string name="notif_dismiss">Dismiss</string>
    <string name="notif_reply">Reply</string>
    <string name="notif_incoming_file_transfer_title">Incoming file from %1$s</string>
    <string name="notif_outgoing_file_transfer_title">Sending file to %1$s</string>
    <string name="notif_incoming_picture">Picture from %1$s</string>
    <string name="notif_sync_title">Syncing data…</string>
    <string name="notif_location_title">Sharing location with %1$s</string>
    <string name="location_share_contact">%1$s is sharing location with you</string>
    <string name="notif_location_multi_title">Sharing location with %1$d contacts</string>
    <string name="notif_location_remaining">%1$d minutes remaining</string>
    <string name="notif_location_action_stop">Stop sharing location</string>
    <string name="location_share_action_start">Start sharing</string>
    <string name="location_share_action_stop">Stop sharing</string>
    <string name="location_share_about_title">Map information</string>
    <string name="location_share_about_message" translatable="false">Map data from OpenStreetMap.\n\n© OpenStreetMap contributors</string>
    <string name="location_share_about_osm_copy_url" translatable="false">https://www.openstreetmap.org/copyright</string>
    <string name="you_txt_prefix">You:</string>
    <string name="action_call_hangup">Hang up</string>
    <string name="action_call_maximize">Maximize</string>
    <string name="action_call_minimize">Reduce</string>
    <string name="action_call_mute">Mute</string>
    <string name="action_call_unmute">Unmute</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="hist_in_call">Incoming call of %1$s</string>
    <string name="hist_out_call">Outgoing call of %1$s</string>
    <string name="start_error_title">Can\'t start Jami !</string>
    <string name="start_error_mic_required">Jami requires the microphone permission to work.</string>
    <string name="action_call_accept">Take call</string>
    <string name="action_call_accept_audio">Answer in audio</string>
    <string name="action_call_accept_video">Answer in video</string>
    <string name="action_call_hold_accept">Hold and take call audio</string>
    <string name="action_call_hold_accept_video">Hold and take call video</string>
    <string name="action_call_end_accept">End and take call</string>
    <string name="action_call_decline">Decline</string>
    <string name="action_call_mic_mute">Mute microphone</string>
    <string name="action_load_plugin">Load Plugin</string>
    <string name="ab_action_speakerphone">Enable speaker</string>
    <string name="ab_action_contact_add">Add to contacts</string>
    <string name="ab_action_contact_add_question">Add to contacts?</string>
    <string name="ab_action_audio_call">Audio call</string>
    <string name="ab_action_video_call">Video call</string>
    <string name="ab_action_change_screen_orientation">Change screen orientation</string>
    <string name="share_via">Share via</string>
    <string name="write_a_message">Write a message</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="ab_action_flipcamera">Flip camera</string>
    <string name="ab_action_hidepreview">Hide preview</string>
    <string name="remote_recording">%s recording…</string>
    <string name="send_message">Send message</string>
    <string name="message_sending">Sending message…</string>
    <string name="message_failed">Failed</string>
    <string name="time_just_now">Just now</string>
    <string name="send_file">Send file</string>
    <string name="select_media">Open gallery</string>
    <string name="hist_file_sent">File sent</string>
    <string name="hist_file_received">File received</string>
    <string name="conversation_send_audio">Record audio clip</string>
    <string name="conversation_send_video">Record video clip</string>
    <string name="conversation_share_location">Share location</string>
    <string name="permission_dialog_camera_title">Camera permission</string>
    <string name="permission_dialog_camera_message">Video conversations require the camera permission to work. Please consider enabling it.</string>
    <string name="ringtone_error_title">Error</string>
    <string name="ringtone_error_format_not_supported">This format is not supported.</string>
    <string name="ringtone_error_size_too_big">This file is too big. The maximum size is %1$dkB.</string>
    <string name="ringtone_custom_prompt">Set a custom ringtone</string>
    <string name="ringtone_custom_label">Custom</string>
    <string name="ringtone_jami_tones">Jami Tones</string>
    <string name="ringtone_default_name" translatable="false">1 AfroNigeria.opus</string>
    <string name="ca_root_file" translatable="false">cacert.pem</string>
    <string name="permission_dialog_read_contacts_message">Jami needs the "Read contacts" permission to enable this feature. Please grant it.</string>
    <string name="conversation_details">Contact details</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_repeat">Repeat new password</string>
    <string name="menu_file_open">Open file</string>
    <string name="menu_file_download">Download file</string>
    <string name="menu_file_delete">Delete file</string>
    <string name="menu_file_share">Share file</string>
    <string name="wizard_status_optional">Optional</string>
    <string name="wizard_password_info">Account password</string>
    <string name="wizard_password_skip">Create account</string>
    <string name="wizard_password_switch">Encrypt account with password</string>
    <string name="wizard_password_warning">Note that the password cannot be recovered</string>
</resources>