<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuitem_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/menu_item_home"/>
        <item
            android:id="@+id/menuitem_accounts"
            android:icon="@drawable/ic_group_black_48dp"
            android:title="@string/menu_item_accounts"/>
        <item
            android:id="@+id/menuitem_prefs"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_item_settings"/>
        <item
            android:id="@+id/menuitem_about"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/menu_item_about"/>
    </group>
</menu>