<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/conv_action_open"
        android:icon="@drawable/baseline_open_in_new_24"
        app:showAsAction="always"
        android:title="@string/menu_file_open" />

    <item
        android:id="@+id/conv_action_share"
        android:icon="@drawable/ic_share_black"
        app:showAsAction="always"
        android:title="@string/menu_file_share" />

    <item
        android:id="@+id/conv_action_download"
        android:icon="@drawable/ic_file_download"
        android:title="@string/menu_file_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/conv_action_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/menu_file_delete"
        app:showAsAction="ifRoom" />


    <!-- TODO RESOURCES -->

    <item
        android:id="@+id/conv_action_copy_text"
        android:icon="@drawable/baseline_delete_24"
        android:title="Copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_action_cancel_message"
        android:icon="@drawable/baseline_delete_24"
        android:title="Cancel Message"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_action_delete_message"
        android:icon="@drawable/baseline_delete_24"
        android:title="Delete Message"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_action_delete_call_history"
        android:icon="@drawable/baseline_delete_24"
        android:title="Delete"
        app:showAsAction="always" />
</menu>