<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".client.HomeActivity">

    <item
        android:id="@+id/menu_contact_search"
        android:hint="@string/searchbar_hint"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/searchbar_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_contact_dial"
        android:icon="@drawable/baseline_dialpad_24"
        android:title="@string/dial_number"
        android:visible="false"
        app:showAsAction="always" />

    <!--
    Created by Rohith M S from Noun Project
    Licensed under Creative Commons :
    http://creativecommons.org/licenses/by/3.0/us/legalcode
    Used without any modification.
    -->
    <item
        android:id="@+id/menu_scan_qr"
        android:icon="@drawable/ic_action_scan_qr"
        android:title="@string/scan_qr"
        app:showAsAction="always"
        app:iconTint="?attr/colorControlNormal"/>

</menu>