<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".client.HomeActivity">

    <item
        android:id="@+id/menu_contact_search"
        android:actionViewClass="android.widget.SearchView"
        android:hint="@string/searchbar_hint"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/searchbar_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/menu_contact_dial"
        android:icon="@drawable/ic_dialpad_white_24dp"
        android:title="@string/dial_number"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_scan_qr"
        android:icon="@drawable/ic_action_remove"
        android:title="@string/scan_qr"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_history"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="100"
        android:title="@string/ab_clear_history"
        app:showAsAction="never" />
</menu>